[gd_scene load_steps=7 format=3 uid="uid://bo75uet52yp5v"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_3rol5"]
[ext_resource type="FontFile" uid="uid://ddclxaa0c75i1" path="res://src/fonts/SuperMarioMaker2-Regular.ttf" id="7_wk5vp"]
[ext_resource type="PackedScene" uid="uid://fh36qkrougk0" path="res://components/btn_small.tscn" id="8_pm0x6"]
[ext_resource type="AudioStream" uid="uid://che0yjkhhnjnp" path="res://src/musics/effect/menu_open.ogg" id="9_fkrlk"]
[ext_resource type="AudioStream" uid="uid://bext1k2lwmj7m" path="res://src/musics/effect/menu_close.ogg" id="10_ia6ip"]

[sub_resource type="LabelSettings" id="LabelSettings_jg0fn"]
font = ExtResource("7_wk5vp")
font_size = 78

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_3rol5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="TextureButton" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -672.0
grow_horizontal = 0
grow_vertical = 2
color = Color(1, 1, 1, 0.564706)

[node name="ColorRect3" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -232.0
offset_right = 304.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="ColorRect4" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -192.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0)

[node name="BtnSmall" parent="ColorRect2/ColorRect4" instance=ExtResource("8_pm0x6")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -78.0
offset_right = -54.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 158.0
grow_horizontal = 2
color = Color(0.996078, 0.8, 0, 1)

[node name="Label" type="Label" parent="ColorRect2/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -221.5
offset_top = 36.0
offset_right = 221.5
offset_bottom = 125.0
grow_horizontal = 2
text = "PAUSE MENU"
label_settings = SubResource("LabelSettings_jg0fn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="audioOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_fkrlk")

[node name="audioClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ia6ip")

[connection signal="pressed" from="ColorRect/TextureButton" to="." method="_on_texture_button_pressed"]
